<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settingsLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.SettingsActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayout0"
        style="@style/text_input_layout"
        android:hint="@string/limit_lives">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/livesEdit"
            style="@style/inputLayout_editText"
            tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayout1"
        style="@style/text_input_layout"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/limit_countdown"
        app:helperTextTextColor="@color/orange_dark">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/timeLimitEdit"
            style="@style/inputLayout_editText"
            tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:gravity="start|center_vertical"
        android:orientation="horizontal">

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/performanceRewardCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/performanceRewardCheckboxLabel"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="start|center_vertical"
            android:labelFor="@id/performanceRewardCheckbox"
            android:text="@string/quickness_bonus"
            android:textColor="?colorPrimary"
            android:textSize="16sp" />
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayout3"
        style="@style/text_input_layout"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/limit_addition_minimum"
        android:inputType="number">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/additionMinEdit"
            style="@style/inputLayout_editText"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:hint=""
            android:inputType="number"
            tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayout4"
        style="@style/text_input_layout"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/limit_addition_maximum"
        android:inputType="number">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/additionMaxEdit"
            style="@style/inputLayout_editText"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:hint=""
            android:inputType="number"
            android:minWidth="32dp"
            tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayout5"
        style="@style/text_input_layout"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/limit_multiplication_minimum"
        android:inputType="number">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/multiplicationMinEdit"
            style="@style/inputLayout_editText"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:hint=""
            android:inputType="number"
            tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayout6"
        style="@style/text_input_layout"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/limit_multiplication_maximum">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/multiplicationMaxEdit"
            style="@style/inputLayout_editText"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:inputType="number"
            tools:ignore="TouchTargetSizeCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/saveButton"
        style="@style/action_button_style"
        android:layout_marginTop="80dp"
        android:text="@string/button_save_and_exit" />

</LinearLayout>