<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.ResultActivity">

    <TextView
        android:id="@+id/congratsTitleView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="20dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/message_congratulations_title"
        android:textColor="@color/orange_dark"
        android:textSize="32sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/congratsSubtitleView"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/message_congratulations_subtitle"
        android:textColor="@color/orange_dark"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/finalScoreView"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal|center_vertical"
        android:textColor="@color/orange_dark"
        android:textSize="96sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/replayButton"
        style="@style/action_button_style"
        android:layout_width="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/shape_button_result"
        android:gravity="center_horizontal|center_vertical"
        android:minWidth="150dp"
        android:text="@string/button_replay" />

    <Button
        android:id="@+id/closeButton"
        style="@style/action_button_style"
        android:layout_width="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/shape_button_result"
        android:gravity="center_horizontal|center_vertical"
        android:minWidth="150dp"
        android:text="@string/button_close"
        android:textColor="@color/blue_deep"
        android:textStyle="bold" />

</LinearLayout>