<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@mipmap/bg1"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="@dimen/menu_padding"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/multiplicationButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|center_horizontal|center_vertical"
        android:layout_margin="@dimen/menu_button_margin"
        android:text="@string/menu_addition"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/additionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|center_horizontal|center_vertical"
        android:layout_margin="@dimen/menu_button_margin"
        android:text="@string/menu_multiplication"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/exitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|center_horizontal|center_vertical"
        android:layout_margin="@dimen/menu_button_margin"
        android:text="@string/menu_exit"
        tools:ignore="SpeakableTextPresentCheck" />

</LinearLayout>