<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.GameActivity">

    <LinearLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:paddingHorizontal="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/lifeLayout"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_margin="4dp"
            android:layout_weight="3"
            android:gravity="start|center_vertical"
            android:orientation="horizontal"
            android:padding="3dp">

            <TextView
                android:id="@+id/lifeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:text="@string/label_life"
                android:textColor="@color/blue_deep"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lifeView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:layout_margin="5dp"
                android:paddingHorizontal="5dp"
                android:text="@string/empty_two_digits"
                android:textColor="@color/blue_deep"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/scoreLayout"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_margin="4dp"
            android:layout_weight="5"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="horizontal"
            android:padding="3dp">

            <TextView
                android:id="@+id/scoreLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:text="@string/label_score"
                android:textColor="@color/blue_deep"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/scoreView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:layout_margin="5dp"
                android:paddingHorizontal="5dp"
                android:text="@string/empty_two_digits"
                android:textColor="@color/blue_deep"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/timerLayout"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_margin="4dp"
            android:layout_weight="3"
            android:gravity="center_vertical|end"
            android:orientation="horizontal"
            android:padding="3dp">

            <TextView
                android:id="@+id/timerLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:text="@string/label_timer"
                android:textColor="@color/blue_deep"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/timerView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:layout_margin="5dp"
                android:paddingHorizontal="5dp"
                android:text="@string/empty_two_digits"
                android:textColor="@color/blue_deep"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/taskLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_element_spacing"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/headerLayout"
        tools:layout_editor_absoluteX="3dp">

        <TextView
            android:id="@+id/assessmentView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="@dimen/margin_text_spacing"
            android:layout_weight="1"
            android:background="@drawable/shape_textfields"
            android:gravity="center"
            android:textColor="@color/white_shade1"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/resultInputView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="@dimen/margin_text_spacing"
            android:layout_weight="1"
            android:background="@drawable/shape_textfields"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/result_hint"
            android:importantForAutofill="no"
            android:inputType="number"
            android:textColor="@color/white_shade1"
            android:textColorHint="@color/beige_light"
            android:textSize="20sp"
            tools:ignore="TextContrastCheck" />

        <LinearLayout
            android:id="@+id/buttonsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_text_spacing"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonCheck"
                style="@style/game_button_style"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:backgroundTint="#B64545"
                android:text="@string/button_check"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonExit"
                style="@style/game_button_style"
                android:layout_weight="1"
                android:text="@string/button_exit"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>